# astryn

./: .gitignore  .vscode  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
astryn-core/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
astryn-core/alembic/: env.py
astryn-core/alembic/versions/: 0001_init.py  0002_communication_preferences.py  0003_api_usage.py
astryn-core/api/: deps.py  main.py  schemas.py  state.py
astryn-core/api/routes/: chat.py  health.py  models.py  preferences.py  projects.py  stream.py  tools.py
astryn-core/db/: engine.py  models.py  repository.py
astryn-core/llm/: agent.py  base.py  config.py  events.py  router.py  skills.py  specialists.py
astryn-core/llm/providers/: anthropic.py  ollama.py
astryn-core/prompts/: coordinator.md  coordinator.py  system.md  system.py
astryn-core/prompts/specialists/: code.md  explore.md  loader.py  plan.md
astryn-core/services/: budget.py  preferences.py  session.py
astryn-core/store/: domain.py  memory.py
astryn-core/tests/: conftest.py
astryn-core/tests/api/: test_chat.py  test_health.py  test_models.py  test_preferences.py  test_projects.py  test_stream.py  test_tools.py
astryn-core/tests/integration/: conftest.py  test_migrations.py  test_preferences_repository.py  test_repository.py  test_session_service.py
astryn-core/tests/unit/: test_agent.py  test_agent_delegation.py  (+17 more)
astryn-core/tools/: definitions.py  executor.py  models.py  registry.py  safety.py
(+28 files in other folders)
