[project]
name = "astryn-core"
version = "0.3.0"
description = "FastAPI backend for the Astryn AI assistant"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "anthropic>=0.40.0",
    "asyncpg==0.31.0",
    "fastapi==0.135.1",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
    "sqlalchemy==2.0.48",
    "uvicorn==0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.4",
    "testcontainers==4.14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring real infrastructure (Postgres via testcontainers)",
]
